@@ -13,7 +13,7 @@
          <param name="RESTOCK_NAV_BEACONS" text="{8888888, 900}" comment="Restock navigation beacons?" type="bool" default="true"/>
          <param name="RESTOCK_AMOUNT_CAP" text="{8888888, 901}" comment="Restock amount cap" type="number" default="10">
             <input_param name="min" value="2"/>
-            <input_param name="max" value="(if this.ship.ammostorage.deployable.capacity gt 0 then this.ship.ammostorage.deployable.capacity else 0)"/>
+            <input_param name="max" value="this.ship.ammostorage.deployable.capacity"/>
             <input_param name="step" value="2"/>
          </param>
          <param name="HOME_POSITION" text="{8888888, 902}" comment="Home Position" type="position" default="[this.ship.sector, this.ship.sector.coreposition]">
@@ -32,11 +32,15 @@
             <input_param name="playerreadonly" value="true"/>
          </param>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-         <param name="SHOW_MESSAGES" text="{8888888, 90}" comment="Show Messages?" type="bool" default="100">
-            <input_param name="truevalue" value="100"/>
+         <param name="SHOW_MESSAGES" text="{8888888, 90}" comment="Show Messages?" type="number" default="1">
+            <input_param name="min" value="0"/>
+            <input_param name="max" value="3"/>
+            <input_param name="step" value="1"/>
          </param>
-         <param name="WRITE_TO_LOG" text="{8888888, 91}" comment="Write to logbook?" type="bool" default="100">
-            <input_param name="truevalue" value="100"/>
+         <param name="WRITE_TO_LOG" text="{8888888, 91}" comment="Write to logbook?" type="number" default="3">
+            <input_param name="min" value="0"/>
+            <input_param name="max" value="3"/>
+            <input_param name="step" value="1"/>
          </param>
          <param name="ADD_ORDER_TAG" text="{8888888, 92}" comment="Add order tag?" type="bool" default="true"/>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -45,14 +49,13 @@
             <input_param name="playerreadonly" value="true"/>
          </param>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+         <param name="DEBUG_FOLDER_NAME" type="internal" default="'JP_DataVaultExplorer.logs'"/>
          <param name="DEBUG" text="Debug" type="number" default="0" advanced="true">
             <input_param name="min" value="0"/>
             <input_param name="max" value="100"/>
             <input_param name="step" value="100"/>
          </param>
-         <param name="debugchance" text="{1041, 10086}" comment="Print debug output" type="bool" default="0" advanced="true">
-            <input_param name="truevalue" value="100"/>
-         </param>
+         <param name="debugchance" type="internal" default="0"/>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
          <param name="PLACE_HOLDER_999" text="----------------------------------" type="object" default="null" advanced="true">
             <input_param name="class" value="[]"/>
@@ -80,16 +83,17 @@
    <init>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <set_value name="$_Ship" exact="this.ship"/>
-      <set_value name="$_OrderName" exact="if $_Ship.defaultorder.id == 'Assist' then $_Ship.commander.defaultorder.name else $_Ship.defaultorder.name"/>
-      <set_value name="$_DVE_Title" exact="'%1 ~ %2 [%3]'.[$_OrderName, $_Ship.knownname, $_Ship.idcode]"/>
+      <set_value name="$_DefaultOrderParamRef" exact="if $_Ship.defaultorder.id == 'Assist' then $_Ship.commander.defaultorder else $_Ship.defaultorder"/>
+      <set_value name="$_DVE_Title" exact="'%1 ~ %2 [%3]'.[$_DefaultOrderParamRef.name, $_Ship.knownname, $_Ship.idcode]"/>
       <substitute_text source="$_DVE_Title" text="$_DVE_Title">
+         <replace string="'\033#FFA95908##DVE-S\033X ~ '" with="''"/>
          <replace string="'\033#FFA95908##DVE-G\033X ~ '" with="''"/>
       </substitute_text>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <add_to_group object="$_Ship" groupname="global.$DVE_ShipsGroup"/>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <do_if value="$DEBUG gt 0">
-         <set_value name="$_DebugFolderName" exact="'JP_DataVaultExplorer.logs'"/>
+         <set_value name="$_DebugFolderName" exact="$DEBUG_FOLDER_NAME"/>
          <set_value name="$_DebugScriptName" exact="'JP_DataVaultExplorerG'"/>
          <set_value name="$_DebugFileName" exact="$_Ship.idcode + '.' + $_DebugScriptName + '.xml.log'"/>
       </do_if>
@@ -126,52 +130,42 @@
          <do_if value="$_Ship.ammostorage.{ware.waypointmarker_01.objectmacro}.count == 0">
             <do_if value="not $RESTOCK_NAV_BEACONS">
                <!-- There are no or not enough navigation beacons available, and automatic restocking of navigation beacons is disabled. -->
-               <show_help custom="$_DVE_Title + '\n\n' + {8888888, 960} + '\n' + {8888888, 961}" position="1" duration="5s" allowclose="true" chance="$SHOW_MESSAGES"/>
-               <write_to_logbook title="$_DVE_Title" text="{8888888, 960} + '\n' + {8888888, 961}" category="upkeep" interaction="showonmap" object="$_Ship" chance="$WRITE_TO_LOG"/>
+               <show_help custom="$_DVE_Title + '\n\n' + {8888888, 960} + '\n' + {8888888, 961}" position="1" allowclose="true" chance="if $SHOW_MESSAGES ge 1 then 100 else 0"/>
+               <write_to_logbook title="$_DVE_Title" text="{8888888, 960} + '\n' + {8888888, 961}" category="upkeep" interaction="showonmap" object="$_Ship" chance="if $WRITE_TO_LOG ge 1 then 100 else 0"/>
                <resume label="HOME_LBL"/>
             </do_if>
-            <set_value name="$_RestockAmmoTable" exact="table[]"/>
-            <do_for_each name="$_EquipmentMacro" in="$_Ship.ammostorage.deployable.table">
-               <set_value name="$_RestockAmmoTable.{$_EquipmentMacro}" exact="0"/>
+            <set_value name="$_DeployablesTable" exact="table[]"/>
+            <do_for_each name="$_DeployableMacro" in="$_Ship.ammostorage.deployable.table">
+               <set_value name="$_DeployablesTable.{$_DeployableMacro}" exact="0"/>
             </do_for_each>
-            <set_value name="$_RestockAmmoTable.{ware.waypointmarker_01.objectmacro}" exact="$RESTOCK_AMOUNT_CAP"/>
-            <run_script name="'jp.lib.RestockEquipment'">
-               <param name="EQUIPMENT_TABLE" value="$_RestockAmmoTable"/>
-               <param name="SHOW_MESSAGES" value="$SHOW_MESSAGES"/>
-               <param name="WRITE_TO_LOG" value="$WRITE_TO_LOG"/>
-               <param name="DEBUG_FOLDER_NAME" value="@$_DebugFolderName"/>
-               <param name="DEBUG" value="$DEBUG"/>
-               <save_retval name="_Result" variable="$_Result"/>
+            <set_value name="$_DeployablesTable.{ware.waypointmarker_01.objectmacro}" exact="$RESTOCK_AMOUNT_CAP"/>
+            <run_script name="'jp.lib.RestockDeployables'" result="$_Result">
+               <param name="DEPLOYABLE_TABLE" value="$_DeployablesTable"/>
+               <param name="FORCE_RERSTOCK" value="true"/>
+               <param name="RESTOCK_TITLE" value="$_DVE_Title"/>
             </run_script>
             <!-- The restock equipment order has failed. More detail is available in the logbook. -->
             <do_if value="$_Result == 'Failed'">
-               <show_help custom="$_DVE_Title + '\n\n' + {8888888, 960} + '\n' +  {8888888, 54}" position="1" duration="5s" allowclose="true" chance="$SHOW_MESSAGES"/>
-               <write_to_logbook title="$_DVE_Title" text="{8888888, 960} + '\n' + {8888888, 54}" category="upkeep" interaction="showonmap" object="$_Ship" chance="$WRITE_TO_LOG"/>
+               <show_help custom="$_DVE_Title + '\n\n' + {8888888, 960} + '\n' +  {8888888, 54}" position="1" allowclose="true" chance="if $SHOW_MESSAGES ge 1 then 100 else 0"/>
+               <write_to_logbook title="$_DVE_Title" text="{8888888, 960} + '\n' + {8888888, 54}" category="upkeep" interaction="showonmap" object="$_Ship" chance="if $WRITE_TO_LOG ge 1 then 100 else 0"/>
                <resume label="HOME_LBL"/>
             </do_if>
          </do_if>
 
          <create_list name="$_FoundDataVaults"/>
-         <run_script name="'jp.lib.DVE.GetDataVaultsToMark'">
+         <run_script name="'jp.lib.DVE.GetDataVaultsToMark'" result="$_FoundDataVaults">
             <param name="OWNERLESS_SECTORS" value="$OWNERLESS_SECTORS"/>
-            <param name="SHOW_MESSAGES"  value="$SHOW_MESSAGES"/>
-            <param name="WRITE_TO_LOG"  value="$WRITE_TO_LOG"/>
-            <param name="DEBUG" value="$DEBUG"/>
-            <save_retval name="_FoundDataVaults" variable="$_FoundDataVaults"/>
          </run_script>
 
          <do_if value="$_FoundDataVaults.count == 0">
             <!-- Currently, there are no datavaults left that we can reach or need to mark. -->
-            <show_help custom="$_DVE_Title + '\n\n' + {8888888, 960} + '\n' + {8888888, 962}" position="1" duration="5s" allowclose="true" chance="$SHOW_MESSAGES"/>
-            <write_to_logbook title="$_DVE_Title" text="{8888888, 960} + '\n' + {8888888, 962}" category="upkeep" interaction="showonmap" object="$_Ship" chance="$WRITE_TO_LOG"/>
+            <show_help custom="$_DVE_Title + '\n\n' + {8888888, 960} + '\n' + {8888888, 962}" position="1" allowclose="true" chance="if $SHOW_MESSAGES ge 1 then 100 else 0"/>
+            <write_to_logbook title="$_DVE_Title" text="{8888888, 960} + '\n' + {8888888, 962}" category="upkeep" interaction="showonmap" object="$_Ship" chance="if $WRITE_TO_LOG ge 1 then 100 else 0"/>
             <resume label="HOME_LBL"/>
          </do_if>
 
          <create_order object="$_Ship" id="'JP_lib_DVE_MarkDataVault'" immediate="true">
             <param name="DATA_VAULT" value="$_FoundDataVaults.{1}"/>
-            <param name="SHOW_MESSAGES"  value="$SHOW_MESSAGES"/>
-            <param name="WRITE_TO_LOG"  value="$WRITE_TO_LOG"/>
-            <param name="DEBUG" value="$DEBUG"/>
          </create_order>
          <wait exact="1000ms"/>
 
