@@ -6,10 +6,6 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <param name="OWNERLESS_SECTORS" default="true"/>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-      <param name="SHOW_MESSAGES" default="0"/>
-      <param name="WRITE_TO_LOG" default="0"/>
-      <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-      <param name="DEBUG" default="0"/>
       <param name="debugchance" default="0"/>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
    </params>
@@ -17,12 +13,16 @@
    <init>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <set_value name="$_Ship" exact="this.ship"/>
-      <set_value name="$_OrderName" exact="if $_Ship.defaultorder.id == 'Assist' then $_Ship.commander.defaultorder.name else $_Ship.defaultorder.name"/>
-      <set_value name="$_DVE_Title" exact="'%1 ~ %2 [%3]'.[$_OrderName, $_Ship.knownname, $_Ship.idcode]"/>
+      <set_value name="$_DefaultOrderParamRef" exact="if $_Ship.defaultorder.id == 'Assist' then $_Ship.commander.defaultorder else $_Ship.defaultorder"/>
+      <set_value name="$_DVE_Title" exact="'%1 ~ %2 [%3]'.[$_DefaultOrderParamRef.name, $_Ship.knownname, $_Ship.idcode]"/>
       <substitute_text source="$_DVE_Title" text="$_DVE_Title">
          <replace string="'\033#FFA95908##DVE-S\033X ~ '" with="''"/>
          <replace string="'\033#FFA95908##DVE-G\033X ~ '" with="''"/>
       </substitute_text>
+      <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+      <set_value name="$SHOW_MESSAGES" exact="$_DefaultOrderParamRef.$SHOW_MESSAGES"/>
+      <set_value name="$WRITE_TO_LOG" exact="$_DefaultOrderParamRef.$WRITE_TO_LOG"/>
+      <set_value name="$DEBUG" exact="$_DefaultOrderParamRef.$DEBUG"/>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <create_list name="$_FoundDataVaults"/>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -64,27 +64,27 @@
                <match owner="$_Ship.owner"/>
                <match_distance object="$_FoundDataVault" space="$_FoundDataVault.sector" max="10km"/>
             </find_object>
+            <check_object result="$_IsSectorKnown" object="$_FoundDataVault.sector" knownto="$_Ship.owner"/>
             <do_if value="($_FoundDataVault.sector.owner == faction.ownerless and not $OWNERLESS_SECTORS) or
                           ($_FoundDataVault.sector.isblacklisted.{blacklisttype.sectoractivity}.{$blacklistgroup}.{$_Ship}) or
+                          not $_IsSectorKnown or
                           @$_NavBeacon != null">
                <remove_from_list name="$_FoundDataVaults" exact="$_FoundDataVault"/>
             </do_if>
          </do_for_each>
 
-         <run_script name="'jp.lib.SortByEstimatedTravelTime'">
+         <run_script name="'jp.lib.SortByEstimatedTravelTime'" result="$_FoundDataVaults">
             <param name="LIST" value="$_FoundDataVaults"/>
-            <param name="DEBUG_FOLDER_NAME" value="@$_DebugFolderName"/>
-            <param name="DEBUG" value="$DEBUG"/>
-            <save_retval name="_SortedList" variable="$_FoundDataVaults"/>
          </run_script>
 
-         <!-- I will start mark a datavault in sector %2%1\033X. -->
-         <run_script name="'jp.lib.GetFactionColorCode'">
-            <param name="FACTION" value="$_FoundDataVaults.{1}.sector.owner"/>
-            <save_retval name="_FactionColorCode" variable="$_ObjectSectorOwnerColor"/>
-         </run_script>
-         <show_help custom="$_DVE_Title + '\n\n' + {8888888, 963}.[$_FoundDataVaults.{1}.sector.knownname, $_ObjectSectorOwnerColor]" position="1" duration="5s" allowclose="true" chance="$SHOW_MESSAGES"/>
-         <write_to_logbook title="$_DVE_Title" text="{8888888, 963}.[$_FoundDataVaults.{1}.sector.knownname, $_ObjectSectorOwnerColor]" category="upkeep" interaction="showonmap" object="$_FoundDataVaults.{1}.sector" chance="$WRITE_TO_LOG"/>
+         <do_if value="$_FoundDataVaults.count gt 0">
+            <run_script name="'jp.lib.GetFactionColorCode'" result="$_ObjectSectorOwnerColor">
+               <param name="FACTION" value="$_FoundDataVaults.{1}.sector.owner"/>
+            </run_script>
+            <!-- I will start mark a datavault in sector %2%1\033X. -->
+            <show_help custom="$_DVE_Title + '\n\n' + {8888888, 963}.[$_FoundDataVaults.{1}.sector.knownname, $_ObjectSectorOwnerColor]" position="1" allowclose="true" chance="if $SHOW_MESSAGES ge 2 then 100 else 0"/>
+            <write_to_logbook title="$_DVE_Title" text="{8888888, 963}.[$_FoundDataVaults.{1}.sector.knownname, $_ObjectSectorOwnerColor]" category="upkeep" interaction="showonmap" object="$_FoundDataVaults.{1}.sector" chance="if $WRITE_TO_LOG ge 2 then 100 else 0"/>
+         </do_if>
 
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
@@ -95,9 +95,7 @@
             <debug_to_file directory="$_DebugFolderName" name="$_DebugFileName" text="'~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n'"/>
          </do_if>
 
-         <return>
-            <retval name="_FoundDataVaults" value="$_FoundDataVaults"/>
-         </return>
+         <return value="$_FoundDataVaults"/>
 
       </actions>
    </attention>
