@@ -17,5 +17,6 @@ v2.0.2 -- Current Published Version
 ~ Updated: Some minor code and translation changes.
 
 v2.0.3 -- Current Development Version
-~ Added: More Notificaitons and logging to the logbook
-~ Updated: Several minor enhancements have been made to the code and translations.
+~ Added: Czech translation
+~ Added: More notifications and logging to the logbook
+~ Updated: Several code clean up and translations changes.
